交接文档: 21-shared-runtime/03 完结(120/152,21 域收官,第 6 批 5/8)
§二 状态行/表格/commit 清单;§五 素材 21-exception-handling-demo.txt(33 个);§6.75 新经验(15+ 处漂移含 5 处机制编造: info->si_addr 非 cr2、查表失败走崩溃报告非 vm_abort、STACK_OVERFLOW 不查表、reserved 1 页、@ReservedStackAccess 方向、raw_exception_handler 不查表、exception_blob 入口链、ExceptionCache 三段、虚拟帧展开、dsin 在 Trig 非 Trans、fdlibm 非 Intel libm、悬念→25-gc);§八 待办 21-03 勾选+25-gc 下一篇;§十 下一步 25-gc-framework/01 指引